fix: removing modal temporarily

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2 class="section-title">Featured Projects</h2>
         <div class="projects-grid">
           <div class="project">
-            <div class="iphone-mockup" onclick="openModal(0)">
+            <div class="iphone-mockup"> <!-- onclick="openModal(0)" -->
               <div class="iphone-screen">
                 <div class="iphone-notch"></div>
                 <div class="project-screen-content app1">
@@ -92,7 +92,7 @@
               </div>
             </div>
 
-            <div id="slideshowModal" class="modal">
+            <!-- <div id="slideshowModal" class="modal">
               <div class="modal-content">
                 <span class="close-btn" onclick="closeModal()">&times;</span>
                 <div class="iphone-mockup" onclick="openModal(0)">
@@ -116,11 +116,11 @@
                 </div>
 
                 <div class="description">
-                  <h2>Slideshow Title</h2>
-                  <p>This is the description for the slideshow. You can use this space to write about the content, context, or purpose of the images being displayed.</p>
+                  <h2>TODO title</h2>
+                  <p>TODO description</p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
 
           <div class="project">
